# config

./: README.md  pyproject.toml
config/: settings.py  urls.py
config/core/: admin.py  forms.py  models.py  urls.py  views.py
config/core/migrations/: 0001_tools.py
config/core/static/css/: style.css
config/core/static/js/: scripts.js
config/core/templates/core/: appointment_scan.html  appointment_voice.html  appontment.html  appontment0.html  appontment1.html  core.html  messages.html  upload.html
config/core/templates/registration/: login.html
contrib/: env-sample
locale/en/LC_MESSAGES/: django.po
locale/pt_br/LC_MESSAGES/: django.po
